welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:4: error: identifier expected but '[' found.
	def posfin([Boolean])=
                   ^SnakeBuggle:42: error: ':' expected but '}' found.
}
^